syntax = "proto3";

import "google/protobuf/empty.proto";

option go_package = "github.com/sn/social-network/pkg/followservice;followservice";

service Follow {
    rpc Follow(FollowRequest) returns (google.protobuf.Empty);
    rpc UnFollow(FollowRequest) returns (google.protobuf.Empty);
}

message FollowRequest {
    string source_id = 1;
    string target_id = 2;
}
